# langchain

./: .gitignore
documentation-helper/: ingestion.py  main.py  pyproject.toml
documentation-helper/backend/: core.py
ice-breaker/: main.py  pyproject.toml
ice-breaker/agents/: linkedin_lookup_agent.py
ice-breaker/third_parties/: linkedin.py
ice-breaker/tools/: tools.py
