[tool.poetry]
name = "ice-breaker"
version = "0.1.0"
description = ""
authors = ["jyoti <paljyoti0129@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.12"
langchain-openai = "^0.2.12"
langchain-community = "^0.3.12"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
